tests/codegen/fail/subscription/argument_non_input_type.stderr
error[E0277]: the trait bound `ObjA: IsInputType<__S>` is not satisfied
  --> fail/subscription/argument_non_input_type.rs:17:29
   |
17 |     async fn id(&self, obj: ObjA) -> Stream<'static, &'static str> {
   |                             ^^^^ the trait `IsInputType<__S>` is not implemented for `ObjA`
   |
   = help: the following other types implement trait `IsInputType<S>`:
             <&T as IsInputType<S>>
             <Arc<T> as IsInputType<S>>
             <Box<T> as IsInputType<S>>
             <ID as IsInputType<__S>>
             <TypeKind as IsInputType<__S>>
             <Vec<T> as IsInputType<S>>
             <[T; N] as IsInputType<S>>
             <[T] as IsInputType<S>>
           and 12 others

error[E0277]: the trait bound `ObjA: FromInputValue<__S>` is not satisfied
    --> fail/subscription/argument_non_input_type.rs:15:1
     |
15   | #[graphql_subscription]
     | ^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromInputValue<__S>` is not implemented for `ObjA`
     |
     = help: the following other types implement trait `FromInputValue<S>`:
               <Arc<T> as FromInputValue<S>>
               <Box<T> as FromInputValue<S>>
               <ID as FromInputValue<__S>>
               <TypeKind as FromInputValue<__S>>
               <Vec<T> as FromInputValue<S>>
               <[T; N] as FromInputValue<S>>
               <bool as FromInputValue<__S>>
               <bson::datetime::DateTime as FromInputValue<__S>>
             and 9 others
note: required by a bound in `Registry::<'r, S>::arg`
    --> $WORKSPACE/juniper/src/executor/mod.rs
     |
     |         T: GraphQLType<S> + FromInputValue<S>,
     |                             ^^^^^^^^^^^^^^^^^ required by this bound in `Registry::<'r, S>::arg`
     = note: this error originates in the attribute macro `graphql_subscription` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `ObjA: FromInputValue<__S>` is not satisfied
  --> fail/subscription/argument_non_input_type.rs:15:1
   |
15 | #[graphql_subscription]
   | ^^^^^^^^^^^^^^^^^^^^^^^ the trait `FromInputValue<__S>` is not implemented for `ObjA`
   |
   = help: the following other types implement trait `FromInputValue<S>`:
             <Arc<T> as FromInputValue<S>>
             <Box<T> as FromInputValue<S>>
             <ID as FromInputValue<__S>>
             <TypeKind as FromInputValue<__S>>
             <Vec<T> as FromInputValue<S>>
             <[T; N] as FromInputValue<S>>
             <bool as FromInputValue<__S>>
             <bson::datetime::DateTime as FromInputValue<__S>>
           and 9 others
   = note: this error originates in the attribute macro `graphql_subscription` (in Nightly builds, run with -Z macro-backtrace for more info)
